--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A chat app made with Socket.io.",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon -e js,html src/app.js"
+    "dev": "nodemon -e js,html src/app.js",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
