--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A chat app made with Socket.io.",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon -e js,html src/app.js"
+    "dev": "nodemon -e js,html src/app.js",
+    "test": "jest --coverage"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.1",
     "nodemon": "^2.0.6",
     "prettier": "2.1.2"
   }
